@@ -1,19 +1,9 @@
-* mocha helper to remove mocking clutter, and checks params like normal #with:
-
-  OSX::NSURConnection.expects(:connectionWithURL).with do |url|
-    url.string.should == 'foo.com'
-  end
-
 * scrip/generate document_model should not be able to run when an extension isn't provided
 
 * rake ib:update doesn't yet update from model files. The question is, should we allow that,
   or should people handle interaction with the view in the controller anyways...?
 
-* See if #when is a better method name than #notify_on. So:
-
-  when :app_did_finish_launching do |notification|
-    puts 'w00t!'
-  end
+* See if #when is a better method name than #notify_on. The method is currently aliased.
 
 * Did some restructuring of the dir layout with regards to controllers and initialize_hooks (rev 42).
   Should probably look if the require structure is still ok... Justin knows about this.
