@@ -1,3 +1,12 @@
+2007-11-12 Eloy Duran <e.duran@superalloy.nl>
+
+	* TODO,
+	  lib/rucola/rucola_support/notifications/notifications.rb,
+	  test/test_notifications.rb:
+
+	- Aliased Notifications #notify_on to #when.
+	- Cleaned TODO.
+
 2007-11-11 Chris McGrath <chris@octopod.info>
 
 	* Manifest.txt,
